# polaris

./: .codecov.yml  .env  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTENANCE.md  Polaris.toml  README.md  Swine.toml  appveyor.yml  build.rs  build_release_unix.sh  build_release_windows.ps1  dev.sqlite  diesel.toml  flake.nix  make_release.ps1  nightwatch.json  polaris.ndb  rust-toolchain  rust-toolchain.toml  update_db_schema.bat  update_submodules.bat
.github/actions/: make_linux_release.yml
.github/actions/make-linux-release/: action.yml
.github/actions/make-windows-release/: action.yml
.github/workflows/: build.yaml  build.yml  coverage.yml  deploy-demo.yml  release.yml  validate-install.yml  validate-pr.yaml
docs/: CONFIGURATION.md  CONTRIBUTING.md  DDNS.md  MAINTENANCE.md  README.md  SETUP.md  _config.yml  index.html
docs/api/: index.html  polaris-api.json
docs/swagger/: index.html  polaris-api.json
migrations/201706250228_directories_date_added/: down.sql  up.sql
migrations/201706272129_users_table/: up.sql
migrations/201706272304_misc_settings_table/: up.sql
migrations/201706272313_ddns_config_table/: down.sql
migrations/201707091522_playlists_tables/: down.sql  up.sql
migrations/20170929203228_add_prefix_url/: down.sql  up.sql
migrations/20171015224223_add_song_duration/: down.sql  up.sql
migrations/20180303211100_add_last_fm_credentials/: down.sql  up.sql
migrations/2019-08-08-042731_blob_auth_secret/: down.sql  up.sql
migrations/2019-09-28-231910_pbkdf2_simple/: down.sql  up.sql
migrations/2020-01-08-231420_add_theme/: down.sql  up.sql
migrations/2020-11-25-174000_remove_prefix_url/: up.sql
migrations/2021-04-04-161431_add_composer_lyricist_genre/: down.sql  up.sql
migrations/2021-05-01-011426_add_lyricist/: down.sql  up.sql
migrations/2022-11-12-143833_multiple_artists/: down.sql  up.sql
res/: SampleConfig.toml  default_config.toml  installer.wxs
res/branding/logo/: logo.ai  logo.eps  social_media_preview.afdesign  sticker_print.afdesign  usage.ai  usage.eps
res/readme/: logo.afdesign
res/unix/: Makefile  release_script.sh
res/windows/: release_script.ps1
res/windows/application/: application.manifest  application.rc  polaris-manifest.rc  polaris.exe.manifest
res/windows/installer/: installer.wxs  license.rtf
src/: api.rs  api_tests.rs  app.rs  artwork.rs  collection.rs  config.rs  db.rs  ddns.rs  error.rs  errors.rs  index.rs  lastfm.rs  main.rs  metadata.rs  options.rs  paths.rs  playlist.rs  rocket_api.rs  serve.rs  server.rs  service.rs  swagger.rs  test.rs  thumbnails.rs  user.rs  utils.rs  vfs.rs  web.rs
src/api/: mod.rs
src/app/: auth.rs  collection.rs  config.rs  ddns.rs  formats.rs  index.rs  lastfm.rs  legacy.rs  mod.rs  ndb.rs  peaks.rs  playlist.rs  scanner.rs  settings.rs  test.rs  thumbnail.rs  user.rs  vfs.rs
src/app/collection/: browser.rs  cleaner.rs  index.rs  inserter.rs  scanner.rs  types.rs  updater.rs
src/app/config/: error.rs  manager.rs  mod.rs  mounts.rs  raw.rs  storage.rs  test.rs  user.rs
src/app/ddns/: config.rs  manager.rs  mod.rs
src/app/index/: browser.rs  collection.rs  dictionary.rs  metadata.rs  mod.rs  query.rs  search.rs  storage.rs  test.rs  types.rs  update.rs
src/app/index/update/: cleaner.rs  collector.rs  inserter.rs  mod.rs  traverser.rs
src/app/lastfm/: manager.rs
src/app/playlist/: error.rs  manager.rs  mod.rs  test.rs
src/app/playlists/: manager.rs  test.rs
src/app/scanner/: cleaner.rs  collector.rs  inserter.rs  metadata.rs  scan.rs  test.rs  traverser.rs  types.rs
src/app/settings/: error.rs  manager.rs  mod.rs
src/app/thumbnail/: generate.rs  manager.rs  options.rs  read.rs
src/app/thumbnails/: generate.rs  manager.rs
src/app/user/: error.rs  manager.rs  mod.rs  preferences.rs  test.rs
src/app/vfs/: manager.rs  mod.rs  test.rs
src/collection/: error.rs  mod.rs  vfs.rs
src/db/: 20240711080449_init.sql  index.rs  mod.rs  models.rs  schema.rs  schema.sqlite
src/db/migrations/201706250006_init/: down.sql  up.sql
src/db/migrations/201706272129_users_table/: up.sql
src/db/migrations/201706272304_misc_settings_table/: down.sql
src/db/migrations/201706272313_ddns_config_table/: up.sql
src/db/migrations/201706272327_mount_points_table/: down.sql  up.sql
src/db/migrations/201707091522_playlists_tables/: up.sql
src/db/migrations/20180303211100_add_last_fm_credentials/: up.sql
src/directories/: linux.rs  mod.rs  windows.rs
src/index/: metadata.rs  mod.rs  populate.rs  query.rs  test.rs  types.rs  update.rs
src/index/update/: cleaner.rs  collector.rs  inserter.rs  mod.rs  traverser.rs
src/server/: axum.rs  doc.rs  dto.rs  error.rs  test.rs
src/server/actix/: api.rs
src/server/axum/: api.rs  auth.rs  error.rs  logger.rs  test.rs  version.rs
src/server/dto/: v7.rs  v8.rs
src/server/test/: admin.rs  auth.rs  browser.rs  collection.rs  ddns.rs  docs.rs  lastfm.rs  media.rs  playlist.rs  protocol.rs  search.rs  settings.rs  swagger.rs  user.rs  web.rs
src/service/: actix.rs  constants.rs  dto.rs  error.rs  mod.rs  test.rs  tests.rs
src/service/actix/: api.rs  mod.rs  server.rs  test.rs
src/service/rocket/: api.rs  api_tests.rs  mod.rs  server.rs  swagger.rs  test.rs  web.rs
src/service/test/: admin.rs  auth.rs  collection.rs  config.rs  constants.rs  ddns.rs  lastfm.rs  media.rs  mod.rs  playlist.rs  preferences.rs  protocol.rs  settings.rs  swagger.rs  user.rs  web.rs
src/ui/: headless.rs  mod.rs  windows.rs
test/: config.toml  sample.flac  sample.opus
test-data/: config.toml  legacy_db_blank.sqlite  legacy_db_populated.sqlite
test-data/artwork/: sample.aif  sample.ape  sample.flac  sample.m4a
test-data/date/: date.ape  date.flac  date.m4a  date.opus
test-data/formats/: sample.aif  sample.ape  sample.flac  sample.m4a  sample.opus
test-data/multivalue/: multivalue.aif  multivalue.ape  multivalue.flac  multivalue.opus
test-data/web/: index.html
test/nightwatch/: environment.js  first_time_flow.js  globals.js
(+4 files in other folders)
