[package]
name = "polaris"
version = "0.0.0"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2021"
build = "build.rs"

[features]
ui = ["native-windows-gui", "native-windows-derive"]

[dependencies]
ape = "0.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-range = "0.4.0"
base64 = "0.22.1"
bitcode = { version = "0.6.3", features = ["serde"] }
branca = "0.10.1"
getopts = "0.2.21"
headers = "0.4"
http = "1.1.0"
id3 = "1.14.0"
lasso2 = { version = "0.8.2", features = ["serialize"] }
lewton = "0.10.2"
log = "0.4.22"
metaflac = "0.2.7"
mp3-duration = "0.1.10"
mp4ameta = "0.11.0"
num_cpus = "1.14.0"
opus_headers = "0.1.2"
pbkdf2 = "0.11"
percent-encoding = "2.2"
rand = "0.8"
rayon = "1.10.0"
regex = "1.10.5"
rustfm-scrobble = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.122"
simplelog = "0.12.2"
symphonia = { version = "0.5.4", features = [
	"all-codecs",
	"all-formats",
	"opt-simd",
] }
tinyvec = { version = "1.8.0", features = ["serde"] }
thiserror = "1.0.62"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io"] }
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["compression-gzip", "fs"] }
trie-rs = { version = "0.4.2", features = ["serde"] }
unicase = "2.7.0"
ureq = { version = "2.10.0", default-features = false, features = ["tls"] }

[dependencies.axum]
version = "0.7.5"
default-features = false
features = ["http1", "json", "tokio", "tower-log", "query"]

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["bmp", "gif", "jpeg", "png"]

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["macros", "migrate", "runtime-tokio", "sqlite"]

[target.'cfg(windows)'.dependencies]
native-windows-gui = { version = "1.0.13", default-features = false, features = [
	"cursor",
	"image-decoder",
	"message-window",
	"menu",
	"tray-notification",
], optional = true }
native-windows-derive = { version = "1.0.5", optional = true }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
sd-notify = "0.4.2"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4.2"
winres = "0.1"

[dev-dependencies]
axum-test = "15.3"
bytes = "1.7.1"

[profile.dev.package.sqlx-macros]
opt-level = 3
