[package]
name = "polaris"
version = "0.0.0"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2021"
build = "build.rs"

[features]
ui = ["native-windows-gui", "native-windows-derive"]

[profile.release]
lto = "thin"

[dependencies]
ape = "0.6"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-range = { version = "0.5.0" }
bitcode = { version = "0.6.3", features = ["serde"] }
branca = "0.10.1"
chumsky = "0.9.3"
enum-map = { version = "2.7.3", features = ["serde"] }
getopts = "0.2.21"
headers = "0.4"
http = "1.1.0"
icu_collator = "1.5.0"
id3 = "1.14.0"
lasso2 = { version = "0.8.2", features = ["serialize"] }
lewton = "0.10.2"
log = "0.4.22"
metaflac = "0.2.7"
mp3-duration = "0.1.10"
mp4ameta = "0.12.1"
native_db = "0.8.1"
native_model = "0.4.20"
nohash-hasher = "0.2.0"
notify = { version = "6.1.1", default-features = false }
notify-debouncer-full = { version = "0.3.1", default-features = false }
num_cpus = "1.14.0"
# TODO upstream PR: https://github.com/yboettcher/opus_headers/pull/7
opus_headers = { git = "https://github.com/agersant/opus_headers", branch = "multivalue" }
pbkdf2 = "0.11"
rand = "0.8"
rayon = "1.10.0"
regex = "1.10.5"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.122"
simplelog = "0.12.2"
symphonia = { version = "0.5.4", features = [
	"all-codecs",
	"all-formats",
	"opt-simd",
] }
tinyvec = { version = "1.8.0", features = ["serde"] }
thiserror = "1.0.62"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io"] }
toml = "0.8.19"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = [
	"compression-gzip",
	"fs",
	"normalize-path",
] }
trie-rs = { version = "0.4.2", features = ["serde"] }
unicase = "2.7.0"
ureq = { version = "2.10.0", default-features = false, features = ["tls"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-axum = { version = "0.1" }
utoipa-scalar = { version = "0.2", features = ["axum"] }

[dependencies.axum]
version = "0.8.1"
default-features = false
features = ["http1", "json", "tokio", "tower-log", "query"]

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["bmp", "gif", "jpeg", "png"]

[target.'cfg(windows)'.dependencies]
native-windows-gui = { version = "1.0.13", default-features = false, features = [
	"cursor",
	"image-decoder",
	"message-window",
	"menu",
	"tray-notification",
], optional = true }
native-windows-derive = { version = "1.0.5", optional = true }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
sd-notify = "0.4.2"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4.2"
winres = "0.1"

[dev-dependencies]
axum-test = "17.0"
bytes = "1.7.1"
percent-encoding = "2.2"
